syntax = "proto3";

// package
package foods;

import  "src/protos/common.proto";
import "google/protobuf/timestamp.proto";

// The foods service definition.
service FoodsService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse) {};
  rpc GetAllStream (common.Empty) returns (stream Food) {}; 
  rpc SendStream (stream Food) returns (GetAllResponse) {};       
}

message GetAllRequest {
  common.Query query = 1;
}

message Food {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  double price = 4;
  string name = 5;
}

message GetAllResponse {
  common.PageInfo page_info = 1;
  repeated Food entities = 2;
}